2005-02-17  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/hal/GNUmakefile.am: Add smi.h to the source list.

2005-02-15  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/queue.c (rt_queue_free): Make sure we don't fiddle
	with the refcount before the pointer validity has been
	checked. Use xnheap_test_and_free() for that purpose.

	* nucleus/heap.c (xnheap_test_and_free): Provide a mean for client
	code to further check freed data after the mere addressing issues
	have been scanned by the heap manager.

2005-02-15  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* scripts/rtai-config.in: Add --cross-compile option and normal
	exit for --help option.

	* GNUmakefile.am (dev devices): Create $(DESTDIR)/dev if it does
	not exist.

2005-02-15  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/heap.h (XNHEAP_MINALIGNSZ): Do not make this
	constant depend on XNHEAP_MINLOG2; those are unrelated.

	* skins/rtai/queue.c (rt_queue_recv): Transfer message ownership
	by properly incrementing the refcount upon direct receive
	(i.e. the receiver did not go through any sleep state through the
	pendq).

	* include/nucleus/asm-ppc/system.h (xnarch_switch_to): Update MSR
	as required when switching in the last Altivec and/or SPE owner.
	(xnarch_switch_to): Don't rely on FTR fixups when emitting
	Altivec's dssall insn; they don't work properly in this context.

2005-02-14  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* configure.in: Prevent invalid SMI workaround configurations
	through configure command line.

	* include/nucleus/asm-ppc/system.h (xnarch_switch_to): Do not
	enforce MSR FP state when switching context, create kernel
	threads with FP bit disabled, then let xnarch_init_thread set it
	and context switches preserve it.

2005-02-14  Philippe Gerum  <rpm@xenomai.org>

	* arch/ppc/patches: Upgrade to Adeos 2.6.10rc3-ppc-r6c12. This
	fixes the random lockup bug experienced while running user-space
	threads.
